RESOLVED FIXED204432
Baseline JIT should fill in StructureStubInfo's propertyIsInt32 and the slow path should update the array profile more frequently
https://bugs.webkit.org/show_bug.cgi?id=204432
Summary Baseline JIT should fill in StructureStubInfo's propertyIsInt32 and the slow ...
Saam Barati
Reported 2019-11-20 17:37:31 PST
...
Attachments
patch (3.59 KB, patch)
2019-11-20 17:47 PST, Saam Barati
no flags
patch (3.59 KB, patch)
2019-11-20 17:49 PST, Saam Barati
tzagallo: review+
Saam Barati
Comment 1 2019-11-20 17:47:50 PST
Saam Barati
Comment 2 2019-11-20 17:48:42 PST
Comment on attachment 384013 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=384013&action=review > Source/JavaScriptCore/jit/JITOperations.cpp:2013 > + Structure* structure = baseValue.structureOrNull(); let me improve this to just call structure()
Saam Barati
Comment 3 2019-11-20 17:49:57 PST
Tadeu Zagallo
Comment 4 2019-11-20 17:51:54 PST
Comment on attachment 384014 [details] patch r=me
Saam Barati
Comment 5 2019-11-20 18:00:38 PST
Radar WebKit Bug Importer
Comment 6 2019-11-20 18:01:24 PST
Note You need to log in before you can comment on or make changes to this bug.