Baseline JIT should fill in StructureStubInfo's propertyIsInt32 and the slow path should update the array profile more frequently https://bugs.webkit.org/show_bug.cgi?id=204432

Reviewed by Tadeu Zagallo.

When I added inline caching for get by val, I removed code which updated the
ArrayProfile with some frequency. This patch adds code that does that back,
which recovers some of the JetStream2 regressions we are seeing.

* jit/JITOperations.cpp:
* jit/JITPropertyAccess.cpp:
(JSC::JIT::emit_op_get_by_val):



Canonical link: https://commits.webkit.org/217706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252725 268f45cc-cd09-0410-ab3c-d52691b4dbfc